[package]
name = "backend-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
dotenv = "0.15.0"
opensearch = "2.2"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.37", features = ["full"] }

[dev-dependencies]
http-body-util = "0.1"
tower = "0.4"
